chore: package scripts

--- a/package.json
+++ b/package.json
@@ -54,14 +54,6 @@
     "scss:main": "sass src/scss/reseter.scss css/reseter.css --no-source-map",
     "scss:opinionated": "sass src/scss/opinionated.scss css/opinionated.css --no-source-map",
     "scss:mini": "sass src/scss/minireseter.scss css/minireseter.css --no-source-map",
-    "less": "npm run-script less:main && npm run-script less:opinionated && npm run-script less:mini",
-    "less:main": "lessc src/less/reseter.less css/reseter.css",
-    "less:opinionated": "lessc src/less/opinionated.less css/opinionated.css",
-    "less:mini": "lessc src/less/minireseter.less css/minireseter.css",
-    "styl": "npm run-script styl:main && npm run-script styl:opinionated && npm run-script styl:mini",
-    "styl:main": "stylus src/stylus/reseter.styl -o css/reseter.css",
-    "styl:opinionated": "stylus src/stylus/opinionated.styl -o css/opinionated.css",
-    "styl:mini": "stylus src/stylus/minireseter.styl -o css/minireseter.css",
     "compile": "npm run-script sass && npm run-script scss && npm run-script less && npm run-script styl",
     "prefix": "npm run-script prefix:main && npm run-script prefix:opinionated && npm run-script prefix:mini",
     "prefix:main": "postcss css/reseter.css -r --no-map -u autoprefixer",
@@ -71,7 +63,8 @@
     "minify:main": "cleancss css/reseter.css -o css/reseter.min.css",
     "minify:opinionated": "cleancss css/opinionated.css -o css/opinionated.min.css",
     "minify:mini": "cleancss css/minireseter.css -o css/minireseter.min.css",
-    "compress": "bundlewatch --config .bundlewatch.config.js"
+    "compress": "bundlewatch --config .bundlewatch.config.js",
+    "styledComponents": "node scripts/styled-components.js"
   },
   "config": {},
   "dependencies": {},
