Corrected link in About section

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "browser",
     "style"
   ],
-  "homepage": "https://krishdevdb.github.io/reseter.css/",
+  "homepage": "https://github.com/krishdevdb/reseter.css",
   "bugs": {
     "url": "https://github.com/krishdevdb/reseter.css/issues",
     "email": "krishdevdb@gmail.com"
